--- a/toc.yaml
+++ b/toc.yaml
@@ -275,6 +275,10 @@ toc:
             - subnets-about.md
             - subnets-create-subnet.md
         - topicgroup:
+            label: Virtual network interfaces
+            topics:
+            - vni-about.md
+        - topicgroup:
             label: Floating IP addresses
             topics:
             - fip-about.md
