Add file storag migration topic

--- a/toc.yaml
+++ b/toc.yaml
@@ -737,6 +737,7 @@ toc:
         - topicgroup:
             label: Migration
             topics:
+            - file_storage_API_replication_fallback_policy.md
             - file_storage_API_migration_access_modes.md
             - file_storage_API_migration_mount_targets.md
             - 2022-03-29-migration.md
