add asymmetric routing TS topic

--- a/toc.yaml
+++ b/toc.yaml
@@ -734,6 +734,7 @@ toc:
             - resource-suspension.md
             - instance-status-messages.md
             - quota-dashboard-troubleshooting.md
+            - ts-asymmetric-routing.md
         - topicgroup:
             label: Migration
             topics:
