--- a/toc.yaml
+++ b/toc.yaml
@@ -68,6 +68,7 @@ toc:
                label: Confidential computing with LinuxONE
                topics:
                - about-confidential-computing.md
+               - hpvs-security.md
                - certificate_validate.md
                - about-contract.md
                - about-attestation.md
@@ -223,7 +224,7 @@ toc:
             - vsi-images.md
             - s390x-vsi-images.md
             - bare_metal_server_image.md
-            - bare_metal_server_image_s390x.md  
+            - bare_metal_server_image_s390x.md
         - topicgroup:
             label: Images - Custom images
             topics:
@@ -257,7 +258,7 @@ toc:
                 - vpc_image_from_volume_create.md
                 - vpc_image_from_volume_manage.md
         - topicgroup:
-            label: Images - Catalog 
+            label: Images - Catalog
             topics:
             - vsi_is_getting_started_vpc_catalog_images.md
             - vsi_is_private_catalog_custom_images.md
@@ -398,7 +399,7 @@ toc:
                 - lb-layer-7-policies-rules.md
                 - lb-updating-subnets.md
                 - lb-monitoring-metrics.md
-                - lb-ig-integration.md 
+                - lb-ig-integration.md
                 - lb-sg-integration.md
                 - lb-private-dns-integration.md
                 - lb-datapath-logging.md
