VPN diagnosing VPN gateway & server health GA (also status description topics)

--- a/toc.yaml
+++ b/toc.yaml
@@ -371,6 +371,9 @@ toc:
                 - vpn-access-service-endpoint.md
                 - vpn-ha.md
                 - vpn-configure-acls-security-groups.md
+                - vpn-gateway-status.md
+                - vpn-health.md
+                - vpn-connection-health.md
                 - vpn-site-to-site-routes-propagating.md
                 - vpn-view-logs.md
                 - vpn-monitoring-metrics.md
@@ -393,6 +396,9 @@ toc:
                 - vpn-client-to-site-setup.md
                 - vpn-client-to-site-connections.md
                 - vpn-client-to-site-change-server-types.md
+                - vpn-client-to-site-status.md
+                - vpn-client-to-site-health.md
+                - vpn-client-to-site-route-health.md
                 - vpn-client-to-site-limitations.md
                 - vpn-client-to-site-loganalysis.md
                 - vpn-client-to-site-monitoring.md
