--- a/toc.yaml
+++ b/toc.yaml
@@ -485,13 +485,13 @@ toc:
             label: Block Storage volumes
             topics:
             - block_storage_is_create.md
+            - block_storage_vpc_byok_encryption.md
             - block_storage_vpc_manage_storage_limits.md
             - block_storage_is_attach.md
             - block_storage_is_use_volume_lin.md
             - block_storage_is_use_volume_win.md
             - block_storage_is_view.md
             - block_storage_is_manage.md
-            - block_storage_vpc_monitoring.md
             - topicgroup:
                 label: Modifying volume capacity and IOPS
                 topics:
@@ -500,6 +500,7 @@ toc:
                 - modifying-the-linux-os-expanded-boot-volume.md
                 - block_storage_vpc_resize_boot_volume.md
                 - block_storage_vpc_adjustable_iops.md
+            - block_storage_vpc_monitoring.md
         - topicgroup:
             label: Snapshots
             topics:
@@ -512,26 +513,31 @@ toc:
             label: File Storage
             topics:
             - file_storage_vpc_plan.md
-            - file_storage_vpc_create.md
-            - file_storage_vpc_view.md
-            - file_storage_vpc_manage.md
-            - file_storage_vpc_eit.md
             - topicgroup:
-                label: Modifying file share size and IOPS
+                label:  Creating file shares
                 topics:
-                - file_storage_vpc_expandable_shares.md
-                - file_storage_vpc_adjustable_iops.md
+                - file_storage_vpc_create.md
+                - file_storage_vpc_byok_encryption.md
             - topicgroup:
-                label: Mounting on Linux
+                label: Mounting file shares
                 topics:
+                - file_storage_vpc_mounthelper.md
                 - file_storage_vpc_mount_rhel.md
                 - file_storage_vpc_mount_centos.md
                 - file_storage_vpc_mount_ubuntu.md
-            - file_storage_vpc_mount_zos.md
+                - file_storage_vpc_mount_zos.md
+            - topicgroup:
+                label:  Managing file shares
+                topics:
+                - file_storage_vpc_view.md
+                - file_storage_vpc_manage.md
+                - file_storage_vpc_expandable_shares.md
+                - file_storage_vpc_adjustable_iops.md
             - topicgroup:
                 label: Replication
                 topics:
                 - file_storage_vpc_replication.md
+                - file_storage_vpc_s2s_auth.md
                 - file_storage_vpc_create_replication.md
                 - file_storage_vpc_manage_replication.md
                 - file_storage_vpc_replication_failover.md
@@ -543,19 +549,6 @@ toc:
             - vsi_is_managing_instance_template.md
             - vsi_private_catalog_autoscale.md
             - vsi_is_scheduled_scaling.md
-        - topicgroup:
-            label: Data encryption
-            topics:
-            - vsi-vpc-about-data-encryption.md
-            - vsi-vpc-planning-encryption.md
-            - vsi_vpc_instance_byok_encryption.md
-            - block_storage_vpc_byok_encryption.md
-            - file_storage_vpc_byok_encryption.md
-            - vpc_byok_multitenant_file_encryption.md
-            - vpc_byok_multitenant_block_encryption.md
-            - vsi_vpc_key_rotation.md
-            - block_storage_vpc_key_rotation.md
-            - vsi-vpc-manage-encryption.md
         - topicgroup:
             label: High availability and disaster recovery
             topics:
@@ -572,9 +565,21 @@ toc:
             label: Enhancing security
             topics:
             - architecture-workload-isolation.md
-            - data-security.md
             - cbr.md
             - storagedurability.md
+            - data-security.md
+            - topicgroup:
+                label: Data encryption
+                topics:
+                - vsi-vpc-about-data-encryption.md
+                - vsi-vpc-planning-encryption.md
+                - vsi_vpc_instance_byok_encryption.md
+                - vpc_byok_multitenant_file_encryption.md
+                - vpc_byok_multitenant_block_encryption.md
+                - vsi_vpc_key_rotation.md
+                - block_storage_vpc_key_rotation.md
+                - vsi-vpc-manage-encryption.md
+            - file_storage_vpc_eit.md
         - topicgroup:
             label: Logging and monitoring
             topics:
