--- a/toc.yaml
+++ b/toc.yaml
@@ -360,6 +360,7 @@ toc:
                 label: VPC routing tables
                 topics:
                 - cr-create-table.md
+                - cr-update-table.md
                 - cr-view-table.md
                 - cr-attach-subnet.md
                 - cr-list-table.md
@@ -368,6 +369,7 @@ toc:
                 label: VPC routes
                 topics:
                 - cr-create-route.md
+                - cr-update-route.md
                 - cr-list-route.md
                 - cr-delete-route.md
         - topicgroup:
