--- a/toc.yaml
+++ b/toc.yaml
@@ -141,6 +141,7 @@ toc:
         - topicgroup:
             label: Updating to the latest API code
             topics:
+            - backup_service_API_migration_instance_backups.md
             - vpn-api-migration.md
             - file_storage_API_replication_fallback_policy.md
             - file_storage_API_migration_access_modes.md
