--- a/toc.yaml
+++ b/toc.yaml
@@ -72,6 +72,12 @@ toc:
            - vsi_is_provisioning_scripts.md
            - instance-profiles-vpc-bandwidth.md
            - topicgroup:
+               label: Confidential computing with SGX for Virtual Servers for VPC
+               topics:
+               - about-sgx-confidential-computing.md
+               - sgx-dcap-attestation.md
+               - create-sgx-virtual-server.md
+           - topicgroup:
                label: Confidential computing with LinuxONE
                topics:
                - about-confidential-computing.md
