--- a/toc.yaml
+++ b/toc.yaml
@@ -515,6 +515,7 @@ toc:
             label: File Storage
             topics:
             - file_storage_vpc_plan.md
+            - file_storage_vpc_s2s_auth.md
             - topicgroup:
                 label:  Creating file shares
                 topics:
@@ -540,7 +541,6 @@ toc:
                 label: Replication
                 topics:
                 - file_storage_vpc_replication.md
-                - file_storage_vpc_s2s_auth.md
                 - file_storage_vpc_create_replication.md
                 - file_storage_vpc_manage_replication.md
                 - file_storage_vpc_replication_failover.md
@@ -551,6 +551,7 @@ toc:
                 label: Creating Block Storage volumes
                 topics:
                 - block_storage_is_create.md
+                - block_storage_vpc_s2s_auth.md
                 - block_storage_vpc_byok_encryption.md
                 - block_storage_vpc_manage_storage_limits.md
             - block_storage_is_attach.md
@@ -634,9 +635,7 @@ toc:
                 topics:
                 - vsi-vpc-about-data-encryption.md
                 - vsi-vpc-planning-encryption.md
-                - vsi_vpc_instance_byok_encryption.md
-                - vsi_vpc_key_rotation.md
-                - block_storage_vpc_key_rotation.md
+                - vsi-vpc-key-rotation.md
                 - vsi-vpc-manage-encryption.md
             - file_storage_vpc_eit.md
         - topicgroup:
