--- a/toc.yaml
+++ b/toc.yaml
@@ -321,7 +321,7 @@ toc:
                 label: Attaching IBM Cloud resources to virtual network interfaces
                 topics:
                 - vni-add-fip.md
-                - vni-about-secondary-ip.md
+                - vni-attach-secondary-ip.md
                 - vni-add-rip.md
                 - vni-add-sg.md
             - vni-attach.md
