--- a/toc.yaml
+++ b/toc.yaml
@@ -390,6 +390,7 @@ toc:
             - security-groups.md
             - security-groups-configure.md
             - security-groups-default.md
+            - security-groups-local-ip-addresses
         - topicgroup:
             label: Routing tables
             topics:
