Separate topic for planning - Client VPN

--- a/toc.yaml
+++ b/toc.yaml
@@ -421,6 +421,7 @@ toc:
                 topics:
                 - vpn-using.md
                 - vpn-create.md
+                - vpn-planning.md
                 - vpn-add-connection.md
                 - vpn-create-ike-policy.md
                 - vpn-create-ipsec-policy.md
