Monitoring a VPC topic addition

--- a/toc.yaml
+++ b/toc.yaml
@@ -135,7 +135,7 @@ toc:
             - include: ../solution-tutorials/vpc-tg-dns-iam.md
             - include: ../solution-tutorials/vpc-site2site-vpn.md
             - include: ../solution-tutorials/vpc-pps-basics.md
-            
+
     - navgroup:
         id: howto
         topics:
@@ -171,6 +171,7 @@ toc:
             - classic-access.md
             - connect-to-cos.md
             - dns-svcs-about.md
+            - vpc-monitoring.md
             - topicgroup:
                 label: Deleting a VPC
                 topics:
