--- a/toc.yaml
+++ b/toc.yaml
@@ -101,10 +101,10 @@ toc:
                topics:
                - block_storage_vpc_about.md
                - block_storage_vpc_capacity_performance.md
-               - block_storage_is_profiles.md
+               - block_storage_vpc_profiles.md
                - block_storage_vpc_bandwidth.md
                - block_storage_vpc_expand_vol_about.md
-           - snapshots_vpc_about.md
+           - bs_snapshots_about.md
            - backup_service_vpc_about.md
            - topicgroup:
                label: File Storage
@@ -581,18 +581,18 @@ toc:
             - topicgroup:
                 label: Creating Block Storage volumes
                 topics:
-                - block_storage_is_create.md
+                - block_storage_vpc_create.md
                 - block_storage_vpc_byok_encryption.md
                 - block_storage_vpc_byok_multitenant_encryption.md
                 - block_storage_vpc_manage_storage_limits.md
-            - block_storage_is_attach.md
-            - block_storage_is_use_volume_lin.md
-            - block_storage_is_use_volume_win.md
+            - block_storage_vpc_attach.md
+            - block_storage_vpc_use_volume_lin.md
+            - block_storage_vpc_use_volume_win.md
             - topicgroup:
                 label: Managing Block Storage volumes
                 topics:
-                - block_storage_is_view.md
-                - block_storage_is_manage.md
+                - block_storage_vpc_view.md
+                - block_storage_vpc_manage.md
                 - block_storage_vpc_expandable_boot_volume.md
                 - block_storage_vpc_expandable_data_volumes.md
                 - block_storage_vpc_adjustable_iops.md
@@ -600,19 +600,19 @@ toc:
         - topicgroup:
             label: Snapshots
             topics:
-            - snapshots_vpc_planning.md
+            - bs_snapshots_planning.md
             - topicgroup:
                 label: Creating snapshots and consistency groups
                 topics:
-                - snapshots_vpc_create.md
-                - snapshots_vpc_create_mvs.md
+                - bs_snapshots_create.md
+                - bs_snapshots_create_mvs.md
             - topicgroup:
                 label: Managing snapshots and consistency groups
                 topics:
-                - snapshots_vpc_view.md
-                - snapshots_vpc_manage.md
-                - snapshots_vpc_manage_mvs.md
-            - snapshots_vpc_restore.md
+                - bs_snapshots_view.md
+                - bs_snapshots_manage.md
+                - bs_snapshots_manage_mvs.md
+            - bs_snapshots_restore.md
         - topicgroup:
             label: Backup service
             topics:
@@ -749,8 +749,8 @@ toc:
             - topicgroup:
                 label: FAQs for storage
                 topics:
-                - block_storage_is_faq.md
-                - snapshots_vpc_faqs.md
+                - block_storage_vpc_faq.md
+                - bs_snapshots_faqs.md
                 - backup_service_vpc_faq.md
                 - backup_service_vpc_enterprise_faq.md
                 - file_storage_vpc_faqs.md
@@ -778,9 +778,9 @@ toc:
                 - troubleshooting-hpvs-shutdown.md
                 - troubleshooting-hpvs-decryption.md
                 - troubleshooting-hpvs-single-volume-workload.md
-            - block_storage_is_troubleshoot.md
+            - block_storage_vpc_troubleshoot.md
             - file_storage_vpc_troubleshoot.md
-            - snapshots_vpc_troubleshooting.md
+            - bs_snapshots_troubleshooting.md
             - backup_service_vpc_troubleshoot.md
             - topicgroup:
                 label: Troubleshooting custom images
