--- a/toc.yaml
+++ b/toc.yaml
@@ -627,6 +627,7 @@ toc:
                 - file_storage_vpc_create.md
                 - file_storage_vpc_byok_encryption.md
                 - file_storage_vpc_byok_multitenant_encryption.md
+                - file_storage_vpc_cross_account_share.md
             - topicgroup:
                 label: Mounting file shares
                 topics:
@@ -641,6 +642,7 @@ toc:
                 - file_storage_vpc_view.md
                 - file_storage_vpc_manage.md
                 - file_storage_vpc_monitoring.md
+                - file_storage_vpc_xaccount_share_access_removal.md
                 - file_storage_vpc_expandable_shares.md
                 - file_storage_vpc_adjustable_iops.md
             - topicgroup:
