Next publish push (#3565)
* Keith Merchant update

* VIKTORIA MUIRHEAD update

* Gudrun Wolfgram update

* VIKTORIA MUIRHEAD update

* VIKTORIA MUIRHEAD update

---------

Co-authored-by: Keith Merchant <noreply@github.ibm.com>
Co-authored-by: VIKTORIA MUIRHEAD <Viktoria.Muirhead@ibm.com>

--- a/toc.yaml
+++ b/toc.yaml
@@ -676,7 +676,7 @@ toc:
                 - byok-manage-encryption.md
             - file_storage_vpc_eit.md
         - topicgroup:
-            label: Logging and monitoring
+            label: Observability
             topics:
             - ibm-monitoring.md
             - logging.md
