--- a/toc.yaml
+++ b/toc.yaml
@@ -72,10 +72,14 @@ toc:
            - vsi_is_provisioning_scripts.md
            - instance-profiles-vpc-bandwidth.md
            - topicgroup:
+               label: Secure boot for VPC
+               topics:
+               - vpc-secure-boot.md
+               - confidential-computing-secure-boot.md
+           - topicgroup:
                label: Confidential computing with SGX for VPC
                topics:
                - about-sgx-confidential-computing.md
-               - confidential-computing-secure-boot.md
                - sgx-dcap-attestation.md
                - create-sgx-virtual-server.md
            - topicgroup:
