--- a/toc.yaml
+++ b/toc.yaml
@@ -67,7 +67,7 @@ toc:
                - vsi_is_dh_profile.md
                - s390x-dh-profiles.md
                - bare_metal_server_profile.md
-               - profiles_benchmark.md    
+               - profiles_benchmark.md
            - vsi_is_provisioning_scripts.md
            - instance-profiles-vpc-bandwidth.md
            - topicgroup:
@@ -417,6 +417,7 @@ toc:
                 - cr-attach-subnet.md
                 - cr-list-table.md
                 - cr-delete-table.md
+                - cr-announcement.md
             - topicgroup:
                 label: VPC routes
                 topics:
